@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-10T16:26:44Z",
+  "timestamp" : "2022-05-11T17:42:28Z",
   "count_outdated" : 171,
   "uniques_outdated" : 40,
-  "count" : 196,
-  "uniques" : 49,
+  "count" : 197,
+  "uniques" : 50,
   "views" : [
     {
       "timestamp": "2022-04-30T00:00:00Z",
@@ -46,6 +46,13 @@
       "count_minmax": [ 0, 4 ],
       "uniques": 3,
       "uniques_minmax": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2022-05-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
