@@ -1,5 +1,5 @@
 {
-  "count": 25,
+  "count": 26,
   "uniques": 5,
   "views": [
     {
@@ -31,6 +31,11 @@
       "timestamp": "2022-05-10T00:00:00Z",
       "count": 4,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-05-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
