@@ -1,3 +1,9 @@
+2022-05-11T17:42:28Z:
+* notice: last 14d: all unq: 26 5
+* notice: prev accum: outdated-all outdated-unq / all unq: 171 40 / 196 49
+* notice: next accum: outdated-all outdated-unq / all unq: 171 40 / 197 50
+* notice: prev json diff / prev day diff: unq all: +1 +1 -0 -0 / +1 +1 -0 -0
+
 2022-05-10T16:26:44Z:
 * notice: last 14d: all unq: 25 5
 * notice: prev accum: outdated-all outdated-unq / all unq: 171 40 / 192 46
